--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "eslint",
     "db:migrate": "dotenv -e .env -- npx prisma migrate dev",
-    "db:studio": "dotenv -e .env -- npx prisma studio"
+    "db:studio": "dotenv -e .env -- npx prisma studio",
+    "db:generate": "dotenv -e .env -- npx prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^6.18.0",
