--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "eslint",
     "db:migrate": "dotenv -e .env -- npx prisma migrate dev",
     "db:studio": "dotenv -e .env -- npx prisma studio",
-    "db:generate": "dotenv -e .env -- npx prisma generate"
+    "db:generate": "dotenv -e .env -- npx prisma generate",
+    "db:reset": "dotenv -e .env -- npx prisma migrate reset"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.1",
     "@prisma/client": "^6.18.0",
     "dotenv-cli": "^11.0.0",
     "next": "16.0.1",
+    "next-auth": "^4.24.13",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
