--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv-cli": "^11.0.0",
     "next": "16.0.1",
     "next-auth": "^4.24.13",
+    "razorpay": "^2.9.6",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
