feat: UI overhaul with glassmorphism, fixed portals, and premium client gallery

--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --webpack",
-    "build": "next build --webpack",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
-    "lint": "eslint",
+    "lint": "eslint . --ext .ts,.tsx --fix",
     "db:migrate": "dotenv -e .env -- npx prisma migrate dev",
     "db:studio": "dotenv -e .env -- npx prisma studio",
     "db:generate": "dotenv -e .env -- npx prisma generate",
@@ -16,6 +16,7 @@
     "@auth/prisma-adapter": "^2.11.1",
     "@prisma/client": "^6.18.0",
     "dotenv-cli": "^11.0.0",
+    "lucide-react": "^0.554.0",
     "next": "16.0.1",
     "next-auth": "^4.24.13",
     "razorpay": "^2.9.6",
@@ -31,6 +32,10 @@
     "eslint-config-next": "16.0.1",
     "prisma": "^6.18.0",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "prettier": "^3.3.3"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
