payments: added secure Razorpay signature verification + improved checkout flow

--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
+    "prettier": "3.6.2",
     "prisma": "^6.18.0",
     "tailwindcss": "^4",
-    "typescript": "^5",
-    "prettier": "^3.3.3"
+    "typescript": "^5"
   },
   "engines": {
     "node": ">=18"
