--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@auth/prisma-adapter": "^2.11.1",
     "@prisma/client": "^6.18.0",
     "dotenv-cli": "^11.0.0",
+    "driver.js": "^1.4.0",
     "lucide-react": "^0.554.0",
     "next": "16.0.1",
     "next-auth": "^4.24.13",
@@ -28,6 +29,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "baseline-browser-mapping": "^2.9.11",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
     "prettier": "3.6.2",
