--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@prisma/client": "^6.18.0",
     "dotenv-cli": "^11.0.0",
     "lucide-react": "^0.554.0",
-    "next": "16.0.1",
+    "next": "^16.1.1",
     "next-auth": "^4.24.13",
     "razorpay": "^2.9.6",
     "react": "19.2.0",
@@ -29,7 +29,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "16.0.1",
+    "eslint-config-next": "^16.1.1",
     "prettier": "3.6.2",
     "prisma": "^6.18.0",
     "tailwindcss": "^4",
